[package]
name = "cbdr"
description = "Tools for comparitive benchmarking"
version = "0.1.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/cbdr"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
arc-swap = "0.4"
behrens-fisher = { path = "behrens-fisher" }
csv = "1.1"
env_logger = "0.7"
humantime = "2.0"
log = "0.4"
once_cell = "1.2"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tabwriter = { version = "1.1", features = ["ansi_formatting"] }
term = "0.6"
time_cmd = { path = "time_cmd" }

[profile.release]
debug = true

[workspace]
members = ["behrens-fisher", "time_cmd"]
