[package]
name = "cbdr"
description = "Tools for comparitive benchmarking"
version = "0.2.1"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"
license = "Unlicense"
readme = "cbdr.md"
repository = "https://github.com/asayers/cbdr"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
arc-swap = "1.0"
behrens-fisher = "0.1"
csv = "1.1"
env_logger = "0.8"
humantime = "2.0"
liveterm = "0.3.0"
log = "0.4"
once_cell = "1.2"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tabwriter = { version = "1.1", features = ["ansi_formatting"] }
time-cmd = "0.1"

[profile.release]
debug = true
