[package]
name = "cbdr"
description = "Tools for comparative benchmarking"
version = "0.2.4"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
readme = "cbdr.md"
repository = "https://github.com/asayers/cbdr"

[workspace]
members = ["behrens-fisher"]

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
arc-swap = "1.7"
behrens-fisher = "0.2.0"
bpaf = { version = "0.9.14", features = ["derive"] }
crossterm = "0.22.1"
csv = "1.3"
env_logger = "0.9"
humantime = "2.1"
liveterm = "0.3.0"
log = "0.4"
once_cell = "1.20"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tabwriter = { version = "1.4", features = ["ansi_formatting"] }
time-cmd = "0.1"

[profile.release]
debug = true
