[package]
name = "behrens-fisher"
description = "Find the difference of the means of two Normal distributions"
version = "0.1.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"
license = "Unlicense"
readme = "../README.md"
repository = "https://github.com/asayers/cbdr"

[dependencies]
special = "0.8"

[dev-dependencies]
approx = "0.4"
