[package]
name = "diff-benches"
version = "0.1.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
structopt = "0.3.4"
serde_json = "1.0.41"
rolling-stats = "0.3.0"
