[package]
name = "diff-benches"
version = "0.1.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.4"
rolling-stats = "0.3.0"
confidence = { path = "../confidence" }
ansi_term = "0.12.1"
tabwriter = "1.1.0"
# ryu = "1.0.2"
csv = "1.1.1"
serde_json = "1.0.41"
log = "0.4.8"
env_logger = "0.7.1"
